removing-blue-highlight

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 <br>
         <br />
 
-        <p>
+        <p class="noSelect">
           Have you ever wondered what it would be like to have the wealth of
           Elon Musk at your disposal? Well, wonder no more! This interactive
           website gives you the power to virtually spend Elon Musk's fortune and
           explore the possibilities of unimaginable wealth.
         </p>
         <br />
-        <p>
+        <p class="noSelect">
           Navigate through our carefully curated collection of mind-boggling
           products, experiences, and philanthropic ventures. From luxury
           supercars and private islands to space tourism and cutting-edge
@@ -40,7 +40,7 @@
           the world.
         </p>
         <br />
-        <p>
+        <p class="noSelect">
           So, go ahead and start exploring! Browse through the categories, add
           items to your virtual shopping cart, and visualize a life of opulence.
           Share your favorite picks with friends and let your imagination run
