--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section class="photo" id="photo">
         <div class="elonmusk">
         <h1 class ="fancy">Spend Elon Musk's Money</h1>
-      <img class="elon"  src="./Pictures//elonmusk.jpg" alt="">
+      <img class="elon"  src="./Pictures//elonmusk.webp" alt="">
       
 
 <br>
