--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="description" content="Indulge in the luxury of spending Elon Musk's money! Explore a world of opulence and extravagance as we showcase premium and lavish items you can imagine. Uncover the allure of high-end living and delve into a realm where Musk's wealth meets luxury dreams.">
+    <meta name="description" content="Explore luxury and spend Elon Musk's money. Discover premium, lavish items, and indulge in high-end living and luxury dreams.">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
