--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     <div class="ese"></div>
     <a href="#text" class="top" aria-label="Back to top" title="Back to top">↑</a>
     <script src="script.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
+     crossorigin="anonymous"></script>
   </body>
 </html>
 <!-- ₹ 182,100,000,000,000 -->
