--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section class="photo" id="photo">
         <div class="elonmusk">
         <h1 class ="fancy">Spend Elon Musk's Money</h1>
-      <img class="elon"  src="./Pictures/elonmusk.webp" alt="Elon Musk" loading="lazy"/>
+      <img class="elon"  src="./Pictures/elonmusk.webp" alt="Elon Musk" />
       
 
 <br>
