--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="description" content="Spend Elon Musk's Money on premium, lavish items, and indulge in high-end living.">
+    <meta name="description" content="Explore luxury and spend Elon Musk's money. Discover premium, lavish items, and indulge in high-end living and luxury dreams.">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="/Pictures/favicon.png">
-    <title>Spend Elon Musk Money</title>
+    <title>Spend Elon Musk's Money</title>
   </head>
   <body>
     <a href="#receipt" class="bottom" id="bottom" onclick="scrollToBottom();" aria-label="Go to bottom" title="Go to bottom">↓</a>
