--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="noSelect">
           Have you ever wondered what it would be like to have the wealth of
           Elon Musk at your disposal? Well, wonder no more! This interactive
-          website gives you the power to virtually spend Elon Musk's fortune and
+          website gives you the power to virtually Spend Elon Musk's Money and
           explore the possibilities of unimaginable wealth.
         </p>
         <br />
