--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/Pictures/favicon.png?">
+    <link rel="shortcut icon" type="image/x-icon" href="/Pictures/favicon.png?">
     <title>Spend Elon Musk's Money</title>
   </head>
   <body>
