--- a/index.html
+++ b/index.html
@@ -1,67 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="description" content="Explore luxury and spend Elon Musk's money. Discover premium, lavish items, and indulge in high-end living and luxury dreams.">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="/Pictures/favicon.png?">
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/Pictures/favicon.png?"
+    />
     <title>Spend Elon Musk's Money</title>
   </head>
   <body>
-    <a href="#receipt" class="bottom" id="bottom" onclick="scrollToBottom();" aria-label="Go to bottom" title="Go to bottom">↓</a>
+    <!-- Navigation link to scroll to the bottom -->
+    <a
+      href="#receipt"
+      class="bottom"
+      id="bottom"
+      onclick="scrollToBottom();"
+      aria-label="Go to bottom"
+      title="Go to bottom"
+      >↓</a
+    >
 
     <div class="container">
-      <header class="text" id="text">
-        <h2 class="zuned">Made By Zuned Aalim</h2>
-      </header>
       <section class="photo" id="photo">
         <div class="elonmusk">
-        <h1 class ="fancy">Spend Elon Musk's Money</h1>
-      <img class="elon"  src="./Pictures/elonmusk.webp" alt="Elon Musk" />
-      
-
-<br>
-        <br />
-
-        <p class="noSelect">
-          Have you ever wondered what it would be like to have the wealth of
-          Elon Musk at your disposal? Well, wonder no more! This interactive
-          website gives you the power to virtually Spend Elon Musk's Money and
-          explore the possibilities of unimaginable wealth.
-        </p>
-        <br />
-        <p class="noSelect">
-          Navigate through our carefully curated collection of mind-boggling
-          products, experiences, and philanthropic ventures. From luxury
-          supercars and private islands to space tourism and cutting-edge
-          technologies, the options are limitless. Imagine yourself owning the
-          most extravagant possessions, traveling to the most exotic
-          destinations, and investing in groundbreaking projects that can change
-          the world.
-        </p>
-        <br />
-        <p class="noSelect">
-          So, go ahead and start exploring! Browse through the categories, add
-          items to your virtual shopping cart, and visualize a life of opulence.
-          Share your favorite picks with friends and let your imagination run
-          wild.
-        </p>
+          <h1 class="fancy">Spend Elon Musk's Money</h1>
+          <img class="elon" src="./Pictures/elonmusk.webp" alt="Elon Musk" />
+          <br />
+          <br />
+        </div>
       </section>
     </div>
-    </div>
+
     <div class="wrapper">
-      <section class="sticky" id="sticky">₹ 18,20,40,00,00,000</section>
+      <section class="sticky" id="sticky">$220,000,000,000</section>
       <main></main>
     </div>
+
+    <!-- Receipt section -->
     <div class="reciept" id="receipt">
       <div id="items"></div>
     </div>
+
+    <!-- Empty div with class "ese" -->
     <div class="ese"></div>
-    <a href="#text" class="top" aria-label="Back to top" title="Back to top">↑</a>
+
+    <!-- Back to top link -->
+    <a href="#photo" class="top" aria-label="Back to top" title="Back to top"
+      >↑</a
+    >
+    <div class="container">
+      <div class="elonmusk">
+        <h1 class="fancy">About</h1>
+      </div>
+      <div class="photo">
+        <p>
+          Welcome to "Elon's Vault," the ultimate playground where you get to
+          step into the shoes of the world's richest person. Our simulator game,
+          "Spend Elon Musk's Money," invites you to embark on a journey of
+          opulence, creativity, and limitless possibilities.
+        </p>
+        <br />
+        <p>
+          Have you ever wondered what it's like to be Elon Musk, the visionary
+          entrepreneur with a net worth that can make your head spin? Imagine
+          having $220 billion in your bank account. What would you do with such
+          an astronomical sum?
+        </p>
+        <br />
+        <p>
+          Elon Musk, the maverick behind Tesla, SpaceX, Twitter, and more, is
+          synonymous with innovation. If he decided to cash out all of his
+          stocks and assets today, his bank account would boast an eye-watering
+          $220,000,000,000 (US Dollars). Now, the power is in your hands to
+          decide the fate of this colossal fortune.
+        </p>
+      </div>
+      <br />
+      <br />
+      <h2 class="fancy">Contact Me</h2>
+      <div class="contact">
+        <div class="inputform">
+          <p>
+            Do you have suggestions or just want to say hi? Feel free to shoot
+            me an email!
+          </p>
+          <form
+            class="inputform"
+            action="mailto:imileke0@gmail.com"
+            method="post"
+          >
+            <textarea
+              class="feedback-input"
+              type="text"
+              id="userInput"
+              name="userInput"
+              placeholder="Type here..."
+            ></textarea>
+            <button class="submitbtn" type="submit">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <!-- Script tags for JavaScript files -->
     <script src="script.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
-     crossorigin="anonymous"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
-<!-- ₹ 182,100,000,000,000 -->
