--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="/Pictures/favicon.png?"
     />
     <title>Spend Elon Musk's Money</title>
+    <meta
+      name="description"
+      content="Spend Elon Musk Money is a simulator game where you can spend all of Elon Musk's money and explore the possibilities of unimaginable wealth"
+    />
   </head>
   <body>
     <!-- Navigation link to scroll to the bottom -->
@@ -59,8 +63,10 @@
         <p>
           Welcome to "Elon's Vault," the ultimate playground where you get to
           step into the shoes of the world's richest person. Our simulator game,
-          "Spend Elon Musk's Money," invites you to embark on a journey of
-          opulence, creativity, and limitless possibilities.
+          "<a title="Spend Elon Musk's Money" href="#photo"
+            >Spend Elon Musk's Money</a
+          >," invites you to embark on a journey of opulence, creativity, and
+          limitless possibilities.
         </p>
         <br />
         <p>
