--- a/index.html
+++ b/index.html
@@ -94,10 +94,21 @@
             me an email!
           </p>
           <form
+            onsubmit="sendEmail(); reset(); return false;"
             class="inputform"
-            action="mailto:imileke0@gmail.com"
-            method="post"
           >
+            <input
+              class="feedback-input"
+              type="text"
+              id="name"
+              placeholder="Name"
+            />
+            <input
+              id="email"
+              placeholder="Email"
+              class="feedback-input"
+              type="email"
+            />
             <textarea
               class="feedback-input"
               type="text"
@@ -105,7 +116,7 @@
               name="userInput"
               placeholder="Type here..."
             ></textarea>
-            <button class="submitbtn" type="submit">Submit</button>
+            <button id="btn" class="submitbtn" type="submit">Submit</button>
           </form>
         </div>
       </div>
@@ -118,5 +129,44 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
       crossorigin="anonymous"
     ></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+    <script>
+      var btn = document.getElementById("btn");
+      btn.addEventListener("click", function (e) {
+        e.preventDefault();
+
+        // Get values from form elements
+        var name = document.getElementById("name").value;
+        var email = document.getElementById("email").value;
+        var message = document.getElementById("userInput").value;
+
+        // Create email body
+        var body =
+          "name: " +
+          name +
+          "<br/> email: " +
+          email +
+          "<br/> Message: " +
+          message;
+
+        // Send email
+        Email.send({
+          SecureToken: "1891bdf1-4580-4afb-a252-f0a503716c7d",
+          To: "imileke0@gmail.com",
+          From: `info@spendelonmoney.shop`,
+          Subject: "Hello ",
+          Body: body,
+        }).then((message) => {
+          // Alert user
+          alert(message);
+
+          // Clear the form
+          document.getElementById("name").value = "";
+          document.getElementById("email").value = "";
+          document.getElementById("userInput").value = "";
+        });
+      });
+    </script>
   </body>
 </html>
