--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="preload"
+      href="./fonts/Audrey-Normal.otf"
+      as="font"
+      type="font/otf"
+      crossorigin
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
@@ -46,6 +53,11 @@
         <div class="elonmusk">
           <h1 class="fancy">Spend Elon Musk's Money</h1>
           <img class="elon" src="./Pictures/elonmusk.webp" alt="Elon Musk" />
+          <img
+            class="elonMobile"
+            src="./Pictures/elonmusk.webp"
+            alt="Elon Musk"
+          />
           <br />
           <br />
         </div>
