--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
         <div class="elonmusk">
           <h1 class="fancy">Spend Elon Musk's Money</h1>
           <img class="elon" src="./Pictures/elonmusk.webp" alt="Elon Musk" />
-          <img
-            class="elonMobile"
-            src="./Pictures/elonmusk.webp"
-            alt="Elon Musk"
-          />
+          <img class="Mobile" src="./Pictures/elonmusk.webp" alt="Elon Musk" />
           <br />
           <br />
         </div>
