--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google tag (gtag.js) -->
+    <!-- Google Analytics -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-BGFKHCVPC3"
@@ -12,11 +12,14 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-
       gtag("config", "G-BGFKHCVPC3");
     </script>
+
+    <!-- Character set and viewport -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Preload font -->
     <link
       rel="preload"
       href="./fonts/Audrey-Normal.otf"
@@ -24,18 +27,25 @@
       type="font/otf"
       crossorigin
     />
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Favicon -->
     <link
       rel="shortcut icon"
       type="image/x-icon"
       href="/Pictures/favicon.png?"
     />
+
+    <!-- Title and description -->
     <title>Spend Elon Musk's Money</title>
     <meta
       name="description"
       content="Spend Elon Musk Money is a simulator game where you can spend all of Elon Musk's money and explore the possibilities of unimaginable wealth"
     />
   </head>
+
   <body>
     <!-- Navigation link to scroll to the bottom -->
     <a
@@ -146,13 +156,7 @@
 
     <!-- Script tags for JavaScript files -->
     <script src="script.js"></script>
-    <!-- <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
-      crossorigin="anonymous"
-    ></script> -->
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
-    <script></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
