--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </script>
 
     <!-- Character set and viewport -->
+    <meta name="robots" content="index" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
