--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css" />
+    <link rel="canonical" href="http://www.spendelonmoney.shop" />
+
     <!-- Preload font -->
     <link
       rel="preload"
@@ -29,9 +33,6 @@
       type="font/otf"
       crossorigin
     />
-
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css" />
 
     <!-- Favicon -->
     <link
@@ -91,31 +92,33 @@
     >
     <div class="container">
       <div class="elonmusk">
-        <h1 class="fancy">About</h1>
+        <h2 class="fancy about">About Spend Elon Musk Money</h2>
       </div>
       <div class="photo">
         <p>
-          Welcome to "Elon's Vault," the ultimate playground where you get to
-          step into the shoes of the world's richest person. Our simulator game,
-          "<a title="Spend Elon Musk's Money" href="#photo"
-            >Spend Elon Musk's Money</a
-          >," invites you to embark on a journey of opulence, creativity, and
-          limitless possibilities.
+          Welcome to "Spend Elon Musk Money" game the ultimate playground where
+          you can spend all of Elon Musk money. Our simulator game, "<a
+            title="Spend Elon Musk Money"
+            href="#photo"
+            >Spend Elon Musk Money</a
+          >," invites you to embark on a journey of luxury life by spending Elon
+          Musk’s fortune on whatever you desire.
         </p>
         <br />
         <p>
-          Have you ever wondered what it's like to be Elon Musk, the visionary
-          entrepreneur with a net worth that can make your head spin? Imagine
-          having $220 billion in your bank account. What would you do with such
-          an astronomical sum?
+          Have you ever wondered what it's like to be Elon Musk, Imagine having
+          $220 billion in your bank account. Now how would you spend Elon Musk
+          $220 billion fortune? The goal is simple spend it all, and spend it
+          fast. Get ready to dive into the billionaire experience with "Spend
+          Elon Musk Money" – where the clock is ticking, and the billions are
+          flying!
         </p>
         <br />
         <p>
-          Elon Musk, the maverick behind Tesla, SpaceX, Twitter, and more, is
-          synonymous with innovation. If he decided to cash out all of his
-          stocks and assets today, his bank account would boast an eye-watering
-          $220,000,000,000 (US Dollars). Now, the power is in your hands to
-          decide the fate of this colossal fortune.
+          Hey there, welcome to the world of unlimited spending! Being a
+          billionaire is all about turning your wildest dreams into reality.
+          Exciting news! Today, you're a billionaire. Let's see how fast you can
+          spend all those billions in just one day!
         </p>
       </div>
       <br />
@@ -124,8 +127,8 @@
       <div class="contact">
         <div class="inputform">
           <p>
-            Do you have suggestions or just want to say hi? Feel free to shoot
-            me an email!
+            Do you have suggestions to add more items or just want to say hi?
+            Feel free to shoot me an email!
           </p>
           <form
             onsubmit="sendEmail(); reset(); return false;"
