--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <div class="elonmusk">
           <h1 class="fancy">Spend Elon Musk's Money</h1>
           <img class="elon" src="./Pictures/elonmusk.webp" alt="Elon Musk" />
+          <img class="mobile" src="./Pictures/elonmusk.webp" alt="Elon Musk" />
           <!-- <img class="Mobile" src="./Pictures/elonmusk.webp" alt="Elon Musk" /> -->
           <br />
           <br />
@@ -100,8 +101,11 @@
           you can spend all of Elon Musk money. Our simulator game, "<a
             title="Spend Elon Musk Money"
             href="#photo"
+            style="color: #f55889"
             >Spend Elon Musk Money</a
-          >," invites you to embark on a journey of luxury life by spending Elon
+          >
+
+          ," invites you to embark on a journey of luxury life by spending Elon
           Musk’s fortune on whatever you desire.
         </p>
         <br />
