--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <title>Spend Elon Musk's Money</title>
     <meta
       name="description"
-      content="Spend Elon Musk Money is a simulator game where you can spend all of Elon Musk's money and explore the possibilities of unimaginable wealth"
+      content="Spend Elon Musk Money is a simulator game where you can spend all of Elon Musk money and explore the possibilities of unimaginable wealth"
     />
   </head>
 
@@ -64,7 +64,7 @@
     <div class="container">
       <section class="photo" id="photo">
         <div class="elonmusk">
-          <h1 class="fancy">Spend Elon Musk's Money</h1>
+          <h1 class="fancy">Spend Elon Musk Money</h1>
           <img class="elon" src="./Pictures/elonmusk.webp" alt="Elon Musk" />
           <!-- <img class="mobile" src="./Pictures/elonmusk.webp" alt="Elon Musk" /> -->
 
@@ -106,7 +106,7 @@
           >
 
           ," invites you to embark on a journey of luxury life by spending Elon
-          Musk’s fortune on whatever you desire.
+          Musk fortune on whatever you desire.
         </p>
         <br />
         <p>
