--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="canonical" href="http://www.spendelonmoney.shop" />
+    <link rel="canonical" href="http://spendelonmoney.shop" />
 
     <!-- Preload font -->
     <link
