--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/Pictures/favicon.png?"
+      href="./Pictures/favicon.png?"
     />
 
     <!-- Title and description -->
