--- a/spend-jeff-bezos-money/termsofuse.html
+++ b/spend-jeff-bezos-money/termsofuse.html
@@ -7,7 +7,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/Pictures/favicon.png?"
+      href="../Pictures/favicon.png?"
     />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Vibur&family=Wix+Madefor+Text&display=swap&family=Ysabeau+Infant:wght@300&family=Sacramento&family=Lato:wght@500&display=swap");
