--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       }
     </style>
     <link rel="stylesheet" href="style.css" />
-    <link rel="canonical" href="https://spendelonmoney.shop" />
+    <link rel="canonical" href="https://www.spendelonmoney.shop" />
 
     <!-- Preload font -->
 
