--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             Feel free to shoot me an email!
           </p>
           <form
-            action="https://formsubmit.co/info@spendelonmoney.shop"
+            action="https://formsubmit.co/481a7614515610757df0d5dcd09b2b59"
             method="POST"
             class="inputform"
           >
