--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         background-position: 0em;
       }
     </style>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style_hidden.css" />
     <link rel="canonical" href="https://www.spendelonmoney.shop" />
 
     <!-- Preload font -->
