--- a/spend-jeff-bezos-money/index.html
+++ b/spend-jeff-bezos-money/index.html
@@ -159,8 +159,8 @@
             Feel free to shoot me an email!
           </p>
           <form
-            action="https://formsubmit.co/481a7614515610757df0d5dcd09b2b59"
-            method="POST"
+          action="https://airform.io/info@spendelonmoney.shop"
+          method="POST"
             class="inputform"
           >
             <input
