--- a/spend-bill-gates-money/index.html
+++ b/spend-bill-gates-money/index.html
@@ -160,8 +160,8 @@
             Feel free to shoot me an email!
           </p>
           <form
-          action="https://airform.io/info@spendelonmoney.shop"
-          method="POST"
+            action="https://formsubmit.co/481a7614515610757df0d5dcd09b2b59"
+            method="POST"
             class="inputform"
           >
             <input
