--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <title>Spend Elon Musk's Money</title>
     <meta
       name="description"
-      content="Spend Elon Musk Money is a simulator game where you can spend all of Elon Musk money and explore the possibilities of unimaginable wealth"
+      content="Spend Elon Musk's Money is a simulator game where you can spend all of Elon Musk money and explore the possibilities of unimaginable wealth"
     />
   </head>
 
@@ -74,7 +74,7 @@
     <header class="container">
       <section class="photo" id="photo">
         <div class="elonmusk">
-          <h1 class="fancy">Spend Elon Musk Money</h1>
+          <h1 class="fancy">Spend Elon Musk's Money</h1>
           <img
             class="elon"
             src="./Pictures/elonmusk.webp"
@@ -120,12 +120,12 @@
       <div class="photo">
         <div class="About">
           <p>
-            Welcome to "Spend Elon Musk Money" game the ultimate playground
+            Welcome to "Spend Elon Musk's Money" game the ultimate playground
             where you can spend all of Elon Musk money. Our simulator game, "<a
               title="Spend Elon Musk Money"
               href="#navigation"
               style="color: #f55889"
-              >Spend Elon Musk Money</a
+              >Spend Elon Musk's Money</a
             >
 
             ," invites you to embark on a journey of luxury life by spending
@@ -137,14 +137,13 @@
             having $220 billion in your bank account. Now how would you spend
             Elon Musk $220 billion fortune? The goal is simple spend it all, and
             spend it fast. Get ready to dive into the billionaire experience
-            with "Spend Elon Musk Money" – where the clock is ticking, and the
+            with "Spend Elon Musk's Money" – where the clock is ticking, and the
             billions are flying!
           </p>
           <br />
           <p>
-            Hey there, welcome to the world of unlimited spending! Being a
-            billionaire is all about turning your wildest dreams into reality.
-            Exciting news! Today, you're a billionaire. Let's see how fast you
+           Being a billionaire is all about turning your wildest dreams into reality.
+            Exciting news! Today, Let's see how fast you
             can spend all those billions in just one day!
           </p>
         </div>
