--- a/spend-bill-gates-money/index.html
+++ b/spend-bill-gates-money/index.html
@@ -134,7 +134,7 @@
           <p>
             Compare your choices with friends, learn more about Bill Gates, and
             see if you can make wise financial decisions in this entertaining
-            and educational game. Now how would you spend Bill Gates $135
+            and educational game. Now how would you spend $135
             billion fortune? The goal is simple spend it all, and spend it
             fast.Are you ready for the ultimate financial adventure? Start
             playing "Spend Bill Gates Money" now and experience the thrill of
@@ -142,8 +142,7 @@
           </p>
           <br />
           <p>
-            Hey there, welcome to the world of unlimited spending! Being a
-            billionaire is all about turning your wildest dreams into reality.
+             Being a billionaire is all about turning your wildest dreams into reality.
             Exciting news! Today, you're a billionaire. Let's see how fast you
             can spend all those billions in just one day!
           </p>
