--- a/spend-jeff-bezos-money/index.html
+++ b/spend-jeff-bezos-money/index.html
@@ -133,7 +133,7 @@
           <p>
             Compare your choices with friends, learn more about Jeff Bezos, and
             see if you can make wise financial decisions in this entertaining
-            and educational game. Now, how would you spend Jeff Bezos $170
+            and educational game. Now, how would you spend $170
             billion fortune? The goal is simple spend it all, and spend it
             fast.Are you ready for the ultimate financial adventure? Start
             playing "Spend Jeff Bezos Money" now and experience the thrill of
@@ -141,8 +141,7 @@
           </p>
           <br />
           <p>
-            Hey there, welcome to the world of unlimited spending! Being a
-            billionaire is all about turning your wildest dreams into reality.
+           Being a billionaire is all about turning your wildest dreams into reality.
             Exciting news! Today, you're a billionaire. Let's see how fast you
             can spend all those billions in just one day!
           </p>
