--- a/spend-jeff-bezos-money/index.html
+++ b/spend-jeff-bezos-money/index.html
@@ -62,11 +62,11 @@
     <!-- href="../Spend-Elon-Musk-s-Money/index.html" -->
     <nav id="navigation">
       <div class="navbar">
-        <a target="_blank" href="../index.html">Spend Elon Musk Money </a>
+        <a target="_blank" href="../index.html">Spend Elon Musk's Money </a>
         <a target="_blank" href="../spend-bill-gates-money/index.html"
-          >Spend Bill Gates Money
+          >Spend Bill Gates' Money
         </a>
-        <a target="_blank" href="./index.html">Spend Jeff Bezos Money </a>
+        <a target="_blank" href="./index.html">Spend Jeff Bezos' Money </a>
       </div>
     </nav>
     <header class="container">
