--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     >
     <nav id="navigation">
       <div class="navbar">
-        <a target="_blank" href="./index.html">Spend Elon Musk Money </a>
+        <a target="_blank" href="./index.html">Spend Elon Musk's Money </a>
         <a target="_blank" href="./spend-bill-gates-money/index.html"
-          >Spend Bill Gates Money
+          >Spend Bill Gates' Money
         </a>
         <a target="_blank" href="./spend-jeff-bezos-money/index.html"
-          >Spend Jeff Bezos Money
+          >Spend Jeff Bezos' Money
         </a>
       </div>
     </nav>
