--- a/spend-jeff-bezos-money/index.html
+++ b/spend-jeff-bezos-money/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <!-- Google Analytics -->
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
+    crossorigin="anonymous"></script>
     <!-- Character set and viewport -->
     <meta name="robots" content="index" />
     <meta charset="UTF-8" />
